Not two JIT shapes: the compilation and the collector are identical and the mode is sticky
I wrote `awfy-sieve` up as bimodal with "two JIT shapes" from one class file.
Chased, and that phrase was mine and is wrong.

*Not the compilation.* Six runs under `-XX:+PrintCompilation`, which both modes
survive -- 4264 and 4282 fast against 5329 to 5373 slow. The logs are the same
program compiled the same way: same methods, same tiers, the same `%` OSR
markers, twelve not-entrant events in each, compilation ids differing by one.

*Not the collector.* Six runs under `-Xlog:gc` spanning both modes, three young
collections in every one.

*And the mode is sticky rather than drawn per run.* Eight consecutive raw runs
came out 5259 to 5450 -- a 3.6% spread, all slow -- where earlier sittings
interleaved fast and slow. Something that was a property of the class file would
not clump by when it was measured.

What fits instead is one program whose inner loop is about five times more
sensitive to machine state than the reference's: in the `nts-bench` sitting the
Java column moved 4%, 4.50 to 4.32 us, while ours moved 22% in the same
direction. A shared environmental component that our code amplifies is a fact
about the emitted loop rather than about the JIT.

That is a smaller claim and a better lead. The question stops being "why two
shapes" and becomes "why is our sieve five times more sensitive than a hand
written `boolean[]` loop", which two loops can answer. `NtsArrayZ` puts the
bytes behind a wrapper with a length field where the reference has a bare array,
and that is the same representation `array-predicates` is at its floor because
of.